fix: map overflow

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,6 +1,8 @@
 body {
   height: 100vh;
   width: 100vw;
+  margin: 0;
+  overflow: hidden;
   transition:
     color 0.5s,
     background-color 0.5s;
